qa/tencent-games.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tencent-games
  name: tencent-games 
  namespace: zb-schools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tencent-games
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
      labels:
        app: tencent-games
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: magnolia-public-frontend
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/tencent-games"
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 50
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: volume-conf
              subPath: default.conf
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      volumes:
        - configMap:
            defaultMode: 420
            items: 
              - key: nginx-tencent-games.conf
                path: default.conf
            name: tencent-games-nginx-conf
          name: volume-conf

---
apiVersion: v1
kind: Service
metadata:
  name: tencent-games-svc
  namespace: zb-schools
spec:
  ports:
    - name: ngames
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tencent-games
  type: ClusterIP
  sessionAffinity: None
