qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: zb-schools
  name: ingress-zb-schools
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: 'stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-0dadead2553acd4c2, subnet-0c2bb4ec65fe1c3c3, subnet-00dbe4ad94510aa95"
    alb.ingress.kubernetes.io/load-balancer-name: "ingress-lb-zb-schools-qa"
    alb.ingress.kubernetes.io/security-groups: "sg-0e87d4e93bc13e96a, sg-0d7a3cdc84dd32e94, sg-0fa6d2be4efcdac97"
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,access_logs.s3.enabled=true,access_logs.s3.bucket=s3-sph-zb-schools-qa-access-log-bucket
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:975050283759:regional/webacl/zb-schools-qa-ingress-alb-wafv2/487bc0ac-fa99-4309-9b94-afe20b8b113f
spec:
  ingressClassName: alb
  rules:
    - host: uat.zbschools.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
          - path: /magnoliaPublic
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
          - path: /authorFrontend
            pathType: Prefix
            backend:
              service:
                name: magnolia-author-frontend-svc
                port:
                  number: 80
          - path: /magnoliaAuthor
            pathType: Prefix
            backend:
              service:
                name: magnolia-author-backend-svc
                port:
                  number: 8080
    - host: m.uat.zbschools.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-mobile-svc
                port:
                  number: 80
          - path: /magnoliaPublic
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
          - path: /lms
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
